--- a/views/fun.html
+++ b/views/fun.html
@@ -4,7 +4,7 @@
     <meta name="author" content="Irene Chou">
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
     <meta name="description" content="Irene Chou professional website">
-    <title>Things I Love to Do for Fun - [Your Name]</title>
+    <title>Things I Love to Do for Fun - Irene</title>
 </head>
 <body style="font-family: Arial">
     <header>
