--- a/irenecho-lab1/views/fun.html
+++ b/irenecho-lab1/views/fun.html
@@ -5,14 +5,10 @@
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
     <meta name="description" content="Irene Chou professional website">
     <title>Things I Love to Do for Fun - Irene</title>
-    <link rel="stylesheet" href="../static/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
 </head>
-<body>
+<body style="font-family: Arial">
     <header>
-        <h1 id="webname">Irene Chou</h1>
+        <h1>Irene Chou</h1>
         <nav>
             <a href="../index.html">Home</a>
             <a href="cv.html">CV</a>
