--- a/views/cv.html
+++ b/views/cv.html
@@ -5,10 +5,14 @@
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
     <meta name="description" content="Irene Chou professional website">
     <title>Curriculum Vitae - Irene Chou</title>
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
 </head>
-<body style="font-family: Arial">
+<body>
     <header>
-        <h1>Irene Chou</h1>
+        <h1 id="webname">Irene Chou</h1>
         <nav>
             <a href="../index.html">Home</a>
             <a href="cv.html">CV</a>
@@ -20,18 +24,30 @@
     <div class="main">
         <h2>Curriculum Vitae</h2>
         <table>
-            <tr>
-                <th>Name</th>
-                <th>Description</th>
-            </tr>
-            <tr>
-                <td>Carnegie Mellon University</td>
-                <td>Sophomore, BS in Information Systems and minor in Business Analytics</td>
-            </tr>
-            <tr>
-                <td>Skills</td>
-                <td>HTML, CSS, Javacript, Python</td>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Carnegie Mellon University</td>
+                    <td>Sophomore, BS in Information Systems and minor in Business Analytics</td>
+                </tr>
+                <tr>
+                    <td>Skills</td>
+                    <td>HTML, CSS, Javacript, Python</td>
+                </tr>
+                <tr>
+                    <td>Experience</td>
+                    <td>Upcoming internship</td>
+                </tr>
+                <tr> 
+                    <td>Languages</td>
+                    <td>English, Mandarin</td>
+                </tr>
+            </tbody>
         </table>
         <p><a href="../static/resume.pdf" target="_blank">My Resume (pdf)</a></p>
     </div>
