--- a/irenecho-lab3/views/contact.html
+++ b/irenecho-lab3/views/contact.html
@@ -10,9 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
-  </head>
-<body onLoad="addYear()">
+</head>
+<body>
     <header>
         <h1 id="webname">Irene Chou</h1>
         <nav>
@@ -25,7 +24,7 @@
     
     <div class="main">
         <h2>Contact Me</h2>
-        <form id="contactForm" action="#" method="post">
+        <form action="#" method="post">
             <p>
               <label for="name">Your Name (required):</label><br>
               <input type="text" id="name" name="name" required>
@@ -60,7 +59,7 @@
         </div>
           
     <footer>
-      <p>designed &amp; coded by Irene Chou &copy;<span id="copyYear"></span></p>
+        <p>&copy; 2025 designed &amp; coded by Irene Chou</p>
     </footer>
 </body>
 </html>
