--- a/irenecho-lab3/views/fun.html
+++ b/irenecho-lab3/views/fun.html
@@ -10,9 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<body onLoad="addYear()">
+<body>
     <header>
         <h1 id="webname">Irene Chou</h1>
         <nav>
@@ -25,8 +24,7 @@
     
     <div class="main">
         <h2>Things I Love to Do for Fun</h2>
-        <button id="showButton" onclick="showList()">Click to see...</button>
-        <ul id="funList">
+        <ul>
             <li>Playing piano</li>
             <li>Baking</li>
             <li>Shopping</li>
@@ -35,7 +33,7 @@
     </div>
     
     <footer>
-        <p>designed &amp; coded by Irene Chou &copy;<span id="copyYear"></span></p>
+        <p>&copy; 2025 designed &amp; coded by Irene Chou</p>
     </footer>
 </body>
 </html>
